y.output
State 121 conflicts: 2 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: GlobalStatementList

    2 GlobalStatementList: GlobalStatementList GlobalStatement
    3                    | GlobalStatement

    4 GlobalStatement: PackageStmt NEWLINE
    5                | FunctionDeclStmt
    6                | NEWLINE

    7 PackageStmt: PACKAGE IDENT

    8 FunctionDeclStmt: FuncOpen FuncParameter ReturnType FuncBlock

    9 FuncParameter: '(' ParameterList ')'

   10 FuncOpen: FUNC IDENT

   11 FuncBlock: FunctionUpBlock StatementList ReturnStmt '}'

   12 FunctionUpBlock: '{'

   13 UnaryExpr: PrimaryExpr
   14          | UnaryExpr INC
   15          | UnaryExpr DEC
   16          | unary_op cast_expression

   17 cast_expression: UnaryExpr
   18                | '(' Type ')' cast_expression

   19 multiplicative_expression: cast_expression
   20                          | multiplicative_expression mul_op cast_expression

   21 additive_expression: multiplicative_expression
   22                    | additive_expression add_op multiplicative_expression

   23 relational_expression: additive_expression
   24                      | relational_expression rel_op additive_expression

   25 equality_expression: relational_expression
   26                    | equality_expression equ_op relational_expression

   27 logical_and_expression: equality_expression
   28                       | logical_and_expression LAND equality_expression

   29 logical_or_expression: logical_and_expression
   30                      | logical_or_expression LOR logical_and_expression

   31 assignment_expression: logical_or_expression
   32                      | UnaryExpr assign_op assignment_expression

   33 Expression: assignment_expression

   34 rel_op: '<'
   35       | LEQ
   36       | '>'
   37       | GEQ

   38 equ_op: EQ
   39       | NEQ

   40 add_op: '+'
   41       | '-'

   42 mul_op: '*'
   43       | '/'
   44       | '%'

   45 unary_op: '+'
   46         | '-'
   47         | '!'

   48 assign_op: '='
   49          | ADD_ASSIGN
   50          | SUB_ASSIGN
   51          | MUL_ASSIGN
   52          | DIV_ASSIGN
   53          | MOD_ASSIGN

   54 PrimaryExpr: Operand
   55            | ConversionExpr

   56 Operand: Literal
   57        | IdSet
   58        | '(' Expression ')'

   59 IdSet: IDENT
   60      | IDENT '(' CallParaList ')'

   61 CallParaList: %empty
   62             | Operand
   63             | CallParaList ',' Operand

   64 Literal: INT_LIT
   65        | FLOAT_LIT
   66        | BOOL_LIT
   67        | '"' STRING_LIT '"'

   68 ConversionExpr: Type '(' Expression ')'

   69 Statement: DeclarationStmt NEWLINE
   70          | SimpleStmt NEWLINE
   71          | Block
   72          | IfStmt
   73          | ForStmt
   74          | SwitchStmt
   75          | CaseStmt
   76          | PrintStmt NEWLINE
   77          | NEWLINE

   78 SimpleStmt: ExpressionStmt

   79 DeclarationStmt: VAR IDENT Type
   80                | VAR IDENT Type '=' Expression

   81 ExpressionStmt: Expression

   82 Block: BlockUp StatementList '}'

   83 BlockUp: '{'

   84 StatementList: Statement StatementList
   85              | Statement

   86 IfStmt: IF Condition IfBlock
   87       | IF Condition IfBlock ELSE IfStmt
   88       | IF Condition IfBlock ELSE Block

   89 IfBlock: IfBlockUp StatementList '}'

   90 IfBlockUp: '{'

   91 Condition: Expression

   92 ForStmt: ForBegin ForClause ForBlock
   93        | ForBegin Condition ForBlock

   94 ForBegin: FOR

   95 ForBlock: ForBlockUp StatementList '}'

   96 ForBlockUp: '{'

   97 ForClause: InitStmt ';' Condition ';' PostStmt

   98 InitStmt: SimpleStmt

   99 PostStmt: SimpleStmt

  100 SwitchStmt: SWITCH Expression Block

  101 CaseStmt: CaseUp Block
  102         | DEFAULT Block

  103 CaseUp: CASE INT_LIT

  104 ReturnType: %empty
  105           | Type

  106 Type: INT
  107     | FLOAT
  108     | STRING
  109     | BOOL

  110 ParameterList: %empty
  111              | IDENT Type
  112              | ParameterList ',' IDENT Type

  113 ReturnStmt: RETURN Expression NEWLINE
  114           | RETURN NEWLINE
  115           | %empty

  116 PrintStmt: PRINT '(' Expression ')'
  117          | PRINTLN '(' Expression ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 47
'"' (34) 67
'%' (37) 44
'(' (40) 9 18 58 60 68 116 117
')' (41) 9 18 58 60 68 116 117
'*' (42) 42
'+' (43) 40 45
',' (44) 63 112
'-' (45) 41 46
'/' (47) 43
';' (59) 97
'<' (60) 34
'=' (61) 48 80
'>' (62) 36
'{' (123) 12 83 90 96
'}' (125) 11 82 89 95
error (256)
VAR (258) 79 80
NEWLINE (259) 4 6 69 70 76 77 113 114
INT (260) 106
FLOAT (261) 107
BOOL (262) 109
STRING (263) 108
INC (264) 14
DEC (265) 15
GEQ (266) 37
LOR (267) 30
LAND (268) 28
EQ (269) 38
LEQ (270) 35
NEQ (271) 39
ADD_ASSIGN (272) 49
SUB_ASSIGN (273) 50
MUL_ASSIGN (274) 51
DIV_ASSIGN (275) 52
MOD_ASSIGN (276) 53
IF (277) 86 87 88
ELSE (278) 87 88
FOR (279) 94
SWITCH (280) 100
CASE (281) 103
FUNC (282) 10
PRINT (283) 116
PACKAGE (284) 7
RETURN (285) 113 114
PRINTLN (286) 117
DEFAULT (287) 102
INT_LIT (288) 64 103
STRING_LIT (289) 67
BOOL_LIT (290) 66
FLOAT_LIT (291) 65
IDENT (292) 7 10 59 60 79 80 111 112


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
Program (55)
    on left: 1, on right: 0
GlobalStatementList (56)
    on left: 2 3, on right: 1 2
GlobalStatement (57)
    on left: 4 5 6, on right: 2 3
PackageStmt (58)
    on left: 7, on right: 4
FunctionDeclStmt (59)
    on left: 8, on right: 5
FuncParameter (60)
    on left: 9, on right: 8
FuncOpen (61)
    on left: 10, on right: 8
FuncBlock (62)
    on left: 11, on right: 8
FunctionUpBlock (63)
    on left: 12, on right: 11
UnaryExpr (64)
    on left: 13 14 15 16, on right: 14 15 17 32
cast_expression (65)
    on left: 17 18, on right: 16 18 19 20
multiplicative_expression (66)
    on left: 19 20, on right: 20 21 22
additive_expression (67)
    on left: 21 22, on right: 22 23 24
relational_expression (68)
    on left: 23 24, on right: 24 25 26
equality_expression (69)
    on left: 25 26, on right: 26 27 28
logical_and_expression (70)
    on left: 27 28, on right: 28 29 30
logical_or_expression (71)
    on left: 29 30, on right: 30 31
assignment_expression (72)
    on left: 31 32, on right: 32 33
Expression (73)
    on left: 33, on right: 58 68 80 81 91 100 113 116 117
rel_op (74)
    on left: 34 35 36 37, on right: 24
equ_op (75)
    on left: 38 39, on right: 26
add_op (76)
    on left: 40 41, on right: 22
mul_op (77)
    on left: 42 43 44, on right: 20
unary_op (78)
    on left: 45 46 47, on right: 16
assign_op (79)
    on left: 48 49 50 51 52 53, on right: 32
PrimaryExpr (80)
    on left: 54 55, on right: 13
Operand (81)
    on left: 56 57 58, on right: 54 62 63
IdSet (82)
    on left: 59 60, on right: 57
CallParaList (83)
    on left: 61 62 63, on right: 60 63
Literal (84)
    on left: 64 65 66 67, on right: 56
ConversionExpr (85)
    on left: 68, on right: 55
Statement (86)
    on left: 69 70 71 72 73 74 75 76 77, on right: 84 85
SimpleStmt (87)
    on left: 78, on right: 70 98 99
DeclarationStmt (88)
    on left: 79 80, on right: 69
ExpressionStmt (89)
    on left: 81, on right: 78
Block (90)
    on left: 82, on right: 71 88 100 101 102
BlockUp (91)
    on left: 83, on right: 82
StatementList (92)
    on left: 84 85, on right: 11 82 84 89 95
IfStmt (93)
    on left: 86 87 88, on right: 72 87
IfBlock (94)
    on left: 89, on right: 86 87 88
IfBlockUp (95)
    on left: 90, on right: 89
Condition (96)
    on left: 91, on right: 86 87 88 93 97
ForStmt (97)
    on left: 92 93, on right: 73
ForBegin (98)
    on left: 94, on right: 92 93
ForBlock (99)
    on left: 95, on right: 92 93
ForBlockUp (100)
    on left: 96, on right: 95
ForClause (101)
    on left: 97, on right: 92
InitStmt (102)
    on left: 98, on right: 97
PostStmt (103)
    on left: 99, on right: 97
SwitchStmt (104)
    on left: 100, on right: 74
CaseStmt (105)
    on left: 101 102, on right: 75
CaseUp (106)
    on left: 103, on right: 101
ReturnType (107)
    on left: 104 105, on right: 8
Type (108)
    on left: 106 107 108 109, on right: 18 68 79 80 105 111 112
ParameterList (109)
    on left: 110 111 112, on right: 9 112
ReturnStmt (110)
    on left: 113 114 115, on right: 11
PrintStmt (111)
    on left: 116 117, on right: 76


State 0

    0 $accept: . Program $end

    NEWLINE  shift, and go to state 1
    FUNC     shift, and go to state 2
    PACKAGE  shift, and go to state 3

    Program              go to state 4
    GlobalStatementList  go to state 5
    GlobalStatement      go to state 6
    PackageStmt          go to state 7
    FunctionDeclStmt     go to state 8
    FuncOpen             go to state 9


State 1

    6 GlobalStatement: NEWLINE .

    $default  reduce using rule 6 (GlobalStatement)


State 2

   10 FuncOpen: FUNC . IDENT

    IDENT  shift, and go to state 10


State 3

    7 PackageStmt: PACKAGE . IDENT

    IDENT  shift, and go to state 11


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 5

    1 Program: GlobalStatementList .
    2 GlobalStatementList: GlobalStatementList . GlobalStatement

    NEWLINE  shift, and go to state 1
    FUNC     shift, and go to state 2
    PACKAGE  shift, and go to state 3

    $default  reduce using rule 1 (Program)

    GlobalStatement   go to state 13
    PackageStmt       go to state 7
    FunctionDeclStmt  go to state 8
    FuncOpen          go to state 9


State 6

    3 GlobalStatementList: GlobalStatement .

    $default  reduce using rule 3 (GlobalStatementList)


State 7

    4 GlobalStatement: PackageStmt . NEWLINE

    NEWLINE  shift, and go to state 14


State 8

    5 GlobalStatement: FunctionDeclStmt .

    $default  reduce using rule 5 (GlobalStatement)


State 9

    8 FunctionDeclStmt: FuncOpen . FuncParameter ReturnType FuncBlock

    '('  shift, and go to state 15

    FuncParameter  go to state 16


State 10

   10 FuncOpen: FUNC IDENT .

    $default  reduce using rule 10 (FuncOpen)


State 11

    7 PackageStmt: PACKAGE IDENT .

    $default  reduce using rule 7 (PackageStmt)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 GlobalStatementList: GlobalStatementList GlobalStatement .

    $default  reduce using rule 2 (GlobalStatementList)


State 14

    4 GlobalStatement: PackageStmt NEWLINE .

    $default  reduce using rule 4 (GlobalStatement)


State 15

    9 FuncParameter: '(' . ParameterList ')'

    IDENT  shift, and go to state 17

    $default  reduce using rule 110 (ParameterList)

    ParameterList  go to state 18


State 16

    8 FunctionDeclStmt: FuncOpen FuncParameter . ReturnType FuncBlock

    INT     shift, and go to state 19
    FLOAT   shift, and go to state 20
    BOOL    shift, and go to state 21
    STRING  shift, and go to state 22

    $default  reduce using rule 104 (ReturnType)

    ReturnType  go to state 23
    Type        go to state 24


State 17

  111 ParameterList: IDENT . Type

    INT     shift, and go to state 19
    FLOAT   shift, and go to state 20
    BOOL    shift, and go to state 21
    STRING  shift, and go to state 22

    Type  go to state 25


State 18

    9 FuncParameter: '(' ParameterList . ')'
  112 ParameterList: ParameterList . ',' IDENT Type

    ')'  shift, and go to state 26
    ','  shift, and go to state 27


State 19

  106 Type: INT .

    $default  reduce using rule 106 (Type)


State 20

  107 Type: FLOAT .

    $default  reduce using rule 107 (Type)


State 21

  109 Type: BOOL .

    $default  reduce using rule 109 (Type)


State 22

  108 Type: STRING .

    $default  reduce using rule 108 (Type)


State 23

    8 FunctionDeclStmt: FuncOpen FuncParameter ReturnType . FuncBlock

    '{'  shift, and go to state 28

    FuncBlock        go to state 29
    FunctionUpBlock  go to state 30


State 24

  105 ReturnType: Type .

    $default  reduce using rule 105 (ReturnType)


State 25

  111 ParameterList: IDENT Type .

    $default  reduce using rule 111 (ParameterList)


State 26

    9 FuncParameter: '(' ParameterList ')' .

    $default  reduce using rule 9 (FuncParameter)


State 27

  112 ParameterList: ParameterList ',' . IDENT Type

    IDENT  shift, and go to state 31


State 28

   12 FunctionUpBlock: '{' .

    $default  reduce using rule 12 (FunctionUpBlock)


State 29

    8 FunctionDeclStmt: FuncOpen FuncParameter ReturnType FuncBlock .

    $default  reduce using rule 8 (FunctionDeclStmt)


State 30

   11 FuncBlock: FunctionUpBlock . StatementList ReturnStmt '}'

    VAR        shift, and go to state 32
    NEWLINE    shift, and go to state 33
    INT        shift, and go to state 19
    FLOAT      shift, and go to state 20
    BOOL       shift, and go to state 21
    STRING     shift, and go to state 22
    IF         shift, and go to state 34
    FOR        shift, and go to state 35
    SWITCH     shift, and go to state 36
    CASE       shift, and go to state 37
    PRINT      shift, and go to state 38
    PRINTLN    shift, and go to state 39
    DEFAULT    shift, and go to state 40
    INT_LIT    shift, and go to state 41
    BOOL_LIT   shift, and go to state 42
    FLOAT_LIT  shift, and go to state 43
    IDENT      shift, and go to state 44
    '('        shift, and go to state 45
    '{'        shift, and go to state 46
    '+'        shift, and go to state 47
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49
    '"'        shift, and go to state 50

    UnaryExpr                  go to state 51
    cast_expression            go to state 52
    multiplicative_expression  go to state 53
    additive_expression        go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    logical_and_expression     go to state 57
    logical_or_expression      go to state 58
    assignment_expression      go to state 59
    Expression                 go to state 60
    unary_op                   go to state 61
    PrimaryExpr                go to state 62
    Operand                    go to state 63
    IdSet                      go to state 64
    Literal                    go to state 65
    ConversionExpr             go to state 66
    Statement                  go to state 67
    SimpleStmt                 go to state 68
    DeclarationStmt            go to state 69
    ExpressionStmt             go to state 70
    Block                      go to state 71
    BlockUp                    go to state 72
    StatementList              go to state 73
    IfStmt                     go to state 74
    ForStmt                    go to state 75
    ForBegin                   go to state 76
    SwitchStmt                 go to state 77
    CaseStmt                   go to state 78
    CaseUp                     go to state 79
    Type                       go to state 80
    PrintStmt                  go to state 81


State 31

  112 ParameterList: ParameterList ',' IDENT . Type

    INT     shift, and go to state 19
    FLOAT   shift, and go to state 20
    BOOL    shift, and go to state 21
    STRING  shift, and go to state 22

    Type  go to state 82


State 32

   79 DeclarationStmt: VAR . IDENT Type
   80                | VAR . IDENT Type '=' Expression

    IDENT  shift, and go to state 83


State 33

   77 Statement: NEWLINE .

    $default  reduce using rule 77 (Statement)


State 34

   86 IfStmt: IF . Condition IfBlock
   87       | IF . Condition IfBlock ELSE IfStmt
   88       | IF . Condition IfBlock ELSE Block

    INT        shift, and go to state 19
    FLOAT      shift, and go to state 20
    BOOL       shift, and go to state 21
    STRING     shift, and go to state 22
    INT_LIT    shift, and go to state 41
    BOOL_LIT   shift, and go to state 42
    FLOAT_LIT  shift, and go to state 43
    IDENT      shift, and go to state 44
    '('        shift, and go to state 45
    '+'        shift, and go to state 47
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49
    '"'        shift, and go to state 50

    UnaryExpr                  go to state 51
    cast_expression            go to state 52
    multiplicative_expression  go to state 53
    additive_expression        go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    logical_and_expression     go to state 57
    logical_or_expression      go to state 58
    assignment_expression      go to state 59
    Expression                 go to state 84
    unary_op                   go to state 61
    PrimaryExpr                go to state 62
    Operand                    go to state 63
    IdSet                      go to state 64
    Literal                    go to state 65
    ConversionExpr             go to state 66
    Condition                  go to state 85
    Type                       go to state 80


State 35

   94 ForBegin: FOR .

    $default  reduce using rule 94 (ForBegin)


State 36

  100 SwitchStmt: SWITCH . Expression Block

    INT        shift, and go to state 19
    FLOAT      shift, and go to state 20
    BOOL       shift, and go to state 21
    STRING     shift, and go to state 22
    INT_LIT    shift, and go to state 41
    BOOL_LIT   shift, and go to state 42
    FLOAT_LIT  shift, and go to state 43
    IDENT      shift, and go to state 44
    '('        shift, and go to state 45
    '+'        shift, and go to state 47
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49
    '"'        shift, and go to state 50

    UnaryExpr                  go to state 51
    cast_expression            go to state 52
    multiplicative_expression  go to state 53
    additive_expression        go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    logical_and_expression     go to state 57
    logical_or_expression      go to state 58
    assignment_expression      go to state 59
    Expression                 go to state 86
    unary_op                   go to state 61
    PrimaryExpr                go to state 62
    Operand                    go to state 63
    IdSet                      go to state 64
    Literal                    go to state 65
    ConversionExpr             go to state 66
    Type                       go to state 80


State 37

  103 CaseUp: CASE . INT_LIT

    INT_LIT  shift, and go to state 87


State 38

  116 PrintStmt: PRINT . '(' Expression ')'

    '('  shift, and go to state 88


State 39

  117 PrintStmt: PRINTLN . '(' Expression ')'

    '('  shift, and go to state 89


State 40

  102 CaseStmt: DEFAULT . Block

    '{'  shift, and go to state 46

    Block    go to state 90
    BlockUp  go to state 72


State 41

   64 Literal: INT_LIT .

    $default  reduce using rule 64 (Literal)


State 42

   66 Literal: BOOL_LIT .

    $default  reduce using rule 66 (Literal)


State 43

   65 Literal: FLOAT_LIT .

    $default  reduce using rule 65 (Literal)


State 44

   59 IdSet: IDENT .
   60      | IDENT . '(' CallParaList ')'

    '('  shift, and go to state 91

    $default  reduce using rule 59 (IdSet)


State 45

   18 cast_expression: '(' . Type ')' cast_expression
   58 Operand: '(' . Expression ')'

    INT        shift, and go to state 19
    FLOAT      shift, and go to state 20
    BOOL       shift, and go to state 21
    STRING     shift, and go to state 22
    INT_LIT    shift, and go to state 41
    BOOL_LIT   shift, and go to state 42
    FLOAT_LIT  shift, and go to state 43
    IDENT      shift, and go to state 44
    '('        shift, and go to state 45
    '+'        shift, and go to state 47
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49
    '"'        shift, and go to state 50

    UnaryExpr                  go to state 51
    cast_expression            go to state 52
    multiplicative_expression  go to state 53
    additive_expression        go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    logical_and_expression     go to state 57
    logical_or_expression      go to state 58
    assignment_expression      go to state 59
    Expression                 go to state 92
    unary_op                   go to state 61
    PrimaryExpr                go to state 62
    Operand                    go to state 63
    IdSet                      go to state 64
    Literal                    go to state 65
    ConversionExpr             go to state 66
    Type                       go to state 93


State 46

   83 BlockUp: '{' .

    $default  reduce using rule 83 (BlockUp)


State 47

   45 unary_op: '+' .

    $default  reduce using rule 45 (unary_op)


State 48

   46 unary_op: '-' .

    $default  reduce using rule 46 (unary_op)


State 49

   47 unary_op: '!' .

    $default  reduce using rule 47 (unary_op)


State 50

   67 Literal: '"' . STRING_LIT '"'

    STRING_LIT  shift, and go to state 94


State 51

   14 UnaryExpr: UnaryExpr . INC
   15          | UnaryExpr . DEC
   17 cast_expression: UnaryExpr .
   32 assignment_expression: UnaryExpr . assign_op assignment_expression

    INC         shift, and go to state 95
    DEC         shift, and go to state 96
    ADD_ASSIGN  shift, and go to state 97
    SUB_ASSIGN  shift, and go to state 98
    MUL_ASSIGN  shift, and go to state 99
    DIV_ASSIGN  shift, and go to state 100
    MOD_ASSIGN  shift, and go to state 101
    '='         shift, and go to state 102

    $default  reduce using rule 17 (cast_expression)

    assign_op  go to state 103


State 52

   19 multiplicative_expression: cast_expression .

    $default  reduce using rule 19 (multiplicative_expression)


State 53

   20 multiplicative_expression: multiplicative_expression . mul_op cast_expression
   21 additive_expression: multiplicative_expression .

    '*'  shift, and go to state 104
    '/'  shift, and go to state 105
    '%'  shift, and go to state 106

    $default  reduce using rule 21 (additive_expression)

    mul_op  go to state 107


State 54

   22 additive_expression: additive_expression . add_op multiplicative_expression
   23 relational_expression: additive_expression .

    '+'  shift, and go to state 108
    '-'  shift, and go to state 109

    $default  reduce using rule 23 (relational_expression)

    add_op  go to state 110


State 55

   24 relational_expression: relational_expression . rel_op additive_expression
   25 equality_expression: relational_expression .

    GEQ  shift, and go to state 111
    LEQ  shift, and go to state 112
    '<'  shift, and go to state 113
    '>'  shift, and go to state 114

    $default  reduce using rule 25 (equality_expression)

    rel_op  go to state 115


State 56

   26 equality_expression: equality_expression . equ_op relational_expression
   27 logical_and_expression: equality_expression .

    EQ   shift, and go to state 116
    NEQ  shift, and go to state 117

    $default  reduce using rule 27 (logical_and_expression)

    equ_op  go to state 118


State 57

   28 logical_and_expression: logical_and_expression . LAND equality_expression
   29 logical_or_expression: logical_and_expression .

    LAND  shift, and go to state 119

    $default  reduce using rule 29 (logical_or_expression)


State 58

   30 logical_or_expression: logical_or_expression . LOR logical_and_expression
   31 assignment_expression: logical_or_expression .

    LOR  shift, and go to state 120

    $default  reduce using rule 31 (assignment_expression)


State 59

   33 Expression: assignment_expression .

    $default  reduce using rule 33 (Expression)


State 60

   81 ExpressionStmt: Expression .

    $default  reduce using rule 81 (ExpressionStmt)


State 61

   16 UnaryExpr: unary_op . cast_expression

    INT        shift, and go to state 19
    FLOAT      shift, and go to state 20
    BOOL       shift, and go to state 21
    STRING     shift, and go to state 22
    INT_LIT    shift, and go to state 41
    BOOL_LIT   shift, and go to state 42
    FLOAT_LIT  shift, and go to state 43
    IDENT      shift, and go to state 44
    '('        shift, and go to state 45
    '+'        shift, and go to state 47
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49
    '"'        shift, and go to state 50

    UnaryExpr        go to state 121
    cast_expression  go to state 122
    unary_op         go to state 61
    PrimaryExpr      go to state 62
    Operand          go to state 63
    IdSet            go to state 64
    Literal          go to state 65
    ConversionExpr   go to state 66
    Type             go to state 80


State 62

   13 UnaryExpr: PrimaryExpr .

    $default  reduce using rule 13 (UnaryExpr)


State 63

   54 PrimaryExpr: Operand .

    $default  reduce using rule 54 (PrimaryExpr)


State 64

   57 Operand: IdSet .

    $default  reduce using rule 57 (Operand)


State 65

   56 Operand: Literal .

    $default  reduce using rule 56 (Operand)


State 66

   55 PrimaryExpr: ConversionExpr .

    $default  reduce using rule 55 (PrimaryExpr)


State 67

   84 StatementList: Statement . StatementList
   85              | Statement .

    VAR        shift, and go to state 32
    NEWLINE    shift, and go to state 33
    INT        shift, and go to state 19
    FLOAT      shift, and go to state 20
    BOOL       shift, and go to state 21
    STRING     shift, and go to state 22
    IF         shift, and go to state 34
    FOR        shift, and go to state 35
    SWITCH     shift, and go to state 36
    CASE       shift, and go to state 37
    PRINT      shift, and go to state 38
    PRINTLN    shift, and go to state 39
    DEFAULT    shift, and go to state 40
    INT_LIT    shift, and go to state 41
    BOOL_LIT   shift, and go to state 42
    FLOAT_LIT  shift, and go to state 43
    IDENT      shift, and go to state 44
    '('        shift, and go to state 45
    '{'        shift, and go to state 46
    '+'        shift, and go to state 47
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49
    '"'        shift, and go to state 50

    $default  reduce using rule 85 (StatementList)

    UnaryExpr                  go to state 51
    cast_expression            go to state 52
    multiplicative_expression  go to state 53
    additive_expression        go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    logical_and_expression     go to state 57
    logical_or_expression      go to state 58
    assignment_expression      go to state 59
    Expression                 go to state 60
    unary_op                   go to state 61
    PrimaryExpr                go to state 62
    Operand                    go to state 63
    IdSet                      go to state 64
    Literal                    go to state 65
    ConversionExpr             go to state 66
    Statement                  go to state 67
    SimpleStmt                 go to state 68
    DeclarationStmt            go to state 69
    ExpressionStmt             go to state 70
    Block                      go to state 71
    BlockUp                    go to state 72
    StatementList              go to state 123
    IfStmt                     go to state 74
    ForStmt                    go to state 75
    ForBegin                   go to state 76
    SwitchStmt                 go to state 77
    CaseStmt                   go to state 78
    CaseUp                     go to state 79
    Type                       go to state 80
    PrintStmt                  go to state 81


State 68

   70 Statement: SimpleStmt . NEWLINE

    NEWLINE  shift, and go to state 124


State 69

   69 Statement: DeclarationStmt . NEWLINE

    NEWLINE  shift, and go to state 125


State 70

   78 SimpleStmt: ExpressionStmt .

    $default  reduce using rule 78 (SimpleStmt)


State 71

   71 Statement: Block .

    $default  reduce using rule 71 (Statement)


State 72

   82 Block: BlockUp . StatementList '}'

    VAR        shift, and go to state 32
    NEWLINE    shift, and go to state 33
    INT        shift, and go to state 19
    FLOAT      shift, and go to state 20
    BOOL       shift, and go to state 21
    STRING     shift, and go to state 22
    IF         shift, and go to state 34
    FOR        shift, and go to state 35
    SWITCH     shift, and go to state 36
    CASE       shift, and go to state 37
    PRINT      shift, and go to state 38
    PRINTLN    shift, and go to state 39
    DEFAULT    shift, and go to state 40
    INT_LIT    shift, and go to state 41
    BOOL_LIT   shift, and go to state 42
    FLOAT_LIT  shift, and go to state 43
    IDENT      shift, and go to state 44
    '('        shift, and go to state 45
    '{'        shift, and go to state 46
    '+'        shift, and go to state 47
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49
    '"'        shift, and go to state 50

    UnaryExpr                  go to state 51
    cast_expression            go to state 52
    multiplicative_expression  go to state 53
    additive_expression        go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    logical_and_expression     go to state 57
    logical_or_expression      go to state 58
    assignment_expression      go to state 59
    Expression                 go to state 60
    unary_op                   go to state 61
    PrimaryExpr                go to state 62
    Operand                    go to state 63
    IdSet                      go to state 64
    Literal                    go to state 65
    ConversionExpr             go to state 66
    Statement                  go to state 67
    SimpleStmt                 go to state 68
    DeclarationStmt            go to state 69
    ExpressionStmt             go to state 70
    Block                      go to state 71
    BlockUp                    go to state 72
    StatementList              go to state 126
    IfStmt                     go to state 74
    ForStmt                    go to state 75
    ForBegin                   go to state 76
    SwitchStmt                 go to state 77
    CaseStmt                   go to state 78
    CaseUp                     go to state 79
    Type                       go to state 80
    PrintStmt                  go to state 81


State 73

   11 FuncBlock: FunctionUpBlock StatementList . ReturnStmt '}'

    RETURN  shift, and go to state 127

    $default  reduce using rule 115 (ReturnStmt)

    ReturnStmt  go to state 128


State 74

   72 Statement: IfStmt .

    $default  reduce using rule 72 (Statement)


State 75

   73 Statement: ForStmt .

    $default  reduce using rule 73 (Statement)


State 76

   92 ForStmt: ForBegin . ForClause ForBlock
   93        | ForBegin . Condition ForBlock

    INT        shift, and go to state 19
    FLOAT      shift, and go to state 20
    BOOL       shift, and go to state 21
    STRING     shift, and go to state 22
    INT_LIT    shift, and go to state 41
    BOOL_LIT   shift, and go to state 42
    FLOAT_LIT  shift, and go to state 43
    IDENT      shift, and go to state 44
    '('        shift, and go to state 45
    '+'        shift, and go to state 47
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49
    '"'        shift, and go to state 50

    UnaryExpr                  go to state 51
    cast_expression            go to state 52
    multiplicative_expression  go to state 53
    additive_expression        go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    logical_and_expression     go to state 57
    logical_or_expression      go to state 58
    assignment_expression      go to state 59
    Expression                 go to state 129
    unary_op                   go to state 61
    PrimaryExpr                go to state 62
    Operand                    go to state 63
    IdSet                      go to state 64
    Literal                    go to state 65
    ConversionExpr             go to state 66
    SimpleStmt                 go to state 130
    ExpressionStmt             go to state 70
    Condition                  go to state 131
    ForClause                  go to state 132
    InitStmt                   go to state 133
    Type                       go to state 80


State 77

   74 Statement: SwitchStmt .

    $default  reduce using rule 74 (Statement)


State 78

   75 Statement: CaseStmt .

    $default  reduce using rule 75 (Statement)


State 79

  101 CaseStmt: CaseUp . Block

    '{'  shift, and go to state 46

    Block    go to state 134
    BlockUp  go to state 72


State 80

   68 ConversionExpr: Type . '(' Expression ')'

    '('  shift, and go to state 135


State 81

   76 Statement: PrintStmt . NEWLINE

    NEWLINE  shift, and go to state 136


State 82

  112 ParameterList: ParameterList ',' IDENT Type .

    $default  reduce using rule 112 (ParameterList)


State 83

   79 DeclarationStmt: VAR IDENT . Type
   80                | VAR IDENT . Type '=' Expression

    INT     shift, and go to state 19
    FLOAT   shift, and go to state 20
    BOOL    shift, and go to state 21
    STRING  shift, and go to state 22

    Type  go to state 137


State 84

   91 Condition: Expression .

    $default  reduce using rule 91 (Condition)


State 85

   86 IfStmt: IF Condition . IfBlock
   87       | IF Condition . IfBlock ELSE IfStmt
   88       | IF Condition . IfBlock ELSE Block

    '{'  shift, and go to state 138

    IfBlock    go to state 139
    IfBlockUp  go to state 140


State 86

  100 SwitchStmt: SWITCH Expression . Block

    '{'  shift, and go to state 46

    Block    go to state 141
    BlockUp  go to state 72


State 87

  103 CaseUp: CASE INT_LIT .

    $default  reduce using rule 103 (CaseUp)


State 88

  116 PrintStmt: PRINT '(' . Expression ')'

    INT        shift, and go to state 19
    FLOAT      shift, and go to state 20
    BOOL       shift, and go to state 21
    STRING     shift, and go to state 22
    INT_LIT    shift, and go to state 41
    BOOL_LIT   shift, and go to state 42
    FLOAT_LIT  shift, and go to state 43
    IDENT      shift, and go to state 44
    '('        shift, and go to state 45
    '+'        shift, and go to state 47
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49
    '"'        shift, and go to state 50

    UnaryExpr                  go to state 51
    cast_expression            go to state 52
    multiplicative_expression  go to state 53
    additive_expression        go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    logical_and_expression     go to state 57
    logical_or_expression      go to state 58
    assignment_expression      go to state 59
    Expression                 go to state 142
    unary_op                   go to state 61
    PrimaryExpr                go to state 62
    Operand                    go to state 63
    IdSet                      go to state 64
    Literal                    go to state 65
    ConversionExpr             go to state 66
    Type                       go to state 80


State 89

  117 PrintStmt: PRINTLN '(' . Expression ')'

    INT        shift, and go to state 19
    FLOAT      shift, and go to state 20
    BOOL       shift, and go to state 21
    STRING     shift, and go to state 22
    INT_LIT    shift, and go to state 41
    BOOL_LIT   shift, and go to state 42
    FLOAT_LIT  shift, and go to state 43
    IDENT      shift, and go to state 44
    '('        shift, and go to state 45
    '+'        shift, and go to state 47
    '-'        shift, and go to state 48
    '!'        shift, and go to state 49
    '"'        shift, and go to state 50

    UnaryExpr                  go to state 51
    cast_expression            go to state 52
    multiplicative_expression  go to state 53
    additive_expression        go to state 54
    relational_expression      go to state 55
    equality_expression        go to state 56
    logical_and_expression     go to state 57
    logical_or_expression      go to state 58
    assignment_expression      go to state 59
    Expression                 go to state 143
    unary_op                   go to state 61
    PrimaryExpr                go to state 62
    Operand                    go to state 63
    IdSet                      go to state 64
    Literal                    go to state 65
    ConversionExpr             go to state 66
    Type                       go to state 80


State 90

  102 CaseStmt: DEFAULT Block .

    $default  reduce using rule 102 (CaseStmt)

